# TMS570CTemplate

./: .gitignore  README.md
project/: CMakeLists.txt  main.c
project/BSP/: CMakeLists.txt
project/BSP/HALCoGen/BSPBaremetal/: BSP.dil  CMakeLists.txt
project/BSP/HALCoGen/BSPBaremetal/source/: lin.c  mibspi.c  notification.c  rti.c  spi.c  sys_core.s  sys_vim.c
project/BSP/HALCoGen/BSPF021/: CMakeLists.txt
project/BSP/HALCoGen/BSPFreeRTOS/: BSPFreeRTOS.dil  BSPFreeRTOS.hcg  CMakeLists.txt
project/BSP/HALCoGen/BSPFreeRTOS/include/: FreeRTOSConfig.h  adc.h  sys_vim.h
project/BSP/HALCoGen/BSPFreeRTOS/source/: het.c  i2c.c
project/BSP/HALCoGen/TiBSPBaremetal/: CMakeLists.txt  TiBSPBaremetal.dil  TiBSPBaremetal.hcg
project/BSP/HALGCode/BSPBaremetal/: BSP.hcg  CMakeLists.txt
project/BSP/HALGCode/BSPBaremetal/include/: sys_vim.h
project/BSP/HALGCode/BSPBaremetal/source/: can.c  sys_intvecs.s  sys_startup.c
project/BSP/HALGCode/BSPF021/: CMakeLists.txt
project/BSP/HALGCode/BSPFreeRTOS/: CMakeLists.txt
project/BSP/HALGCode/BSPFreeRTOS/include/: can.h  i2c.h  mibspi.h  sci.h  spi.h
project/BSP/HALGCode/BSPFreeRTOS/source/: adc.c  notification.c  os_portasm.s  sys_vim.c
project/BSP/HALGCode/TiBSPBaremetal/: CMakeLists.txt
project/BSP/HALGCode/TiBSPBaremetal/include/: system.h
project/BSP/HALGCode/TiBSPBaremetal/source/: notification.c  sci.c  system.c
project/cmake/: gcc_linux-toolchain.cmake  gcc_toolchain.cmake  gcc_win-toolchain.cmake  linux-toolchain.cmake  project.cmake  ti_linux-toolchain.cmake  ti_tms570ls122_cfg.ld  ti_toolchain.cmake  ti_toolchain_epilog.cmake  ti_win-toolchain.cmake  toolchain.cmake
utils/: lldb.cmd  start_lldb.sh  start_openocd.sh  ti_tms570.cfg
