################################################################################
# @file CMakeLists.txt
# @author Josepablo C (josepablo134@gmail.com)
################################################################################

add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALGCode/BSPBaremetal )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALGCode/BSPFreeRTOS )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALGCode/BSPF021 )
