################################################################################
# @file CMakeLists.txt
# @author Josepablo C (josepablo134@gmail.com)
################################################################################

# add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALCoGen/BSPBaremetal )
# add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALCoGen/BSPFreeRTOS )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALCoGen/TiBSPBaremetal )
# add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALCoGen/TiBSPFreeRTOS )
add_subdirectory( ${CMAKE_CURRENT_LIST_DIR}/HALCoGen/BSPF021 )
